# Protfolio_Site

./: .gitignore  readme.md
Backend/: hi.py  main.py  pyproject.toml  requirments.txt
my-personal-site/: next.config.ts  package-lock.json  package.json
my-personal-site/app/: globals.css  layout.tsx  orbit.tsx  page.tsx
my-personal-site/app/My_Works/: layout.tsx
my-personal-site/app/My_Works/Contacts/: page.tsx
my-personal-site/app/My_Works/Project1/: page.tsx
my-personal-site/app/My_Works/about/: page.tsx
my-personal-site/app/components/: Footer.tsx  Navbar.tsx
