[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "click==8.3.2",
    "colorama==0.4.6",
    "fastapi==0.136.0",
    "h11==0.16.0",
    "idna==3.11",
    "pydantic[email]==2.13.2",
    "pydantic-core==2.46.2",
    "python-dotenv==1.2.2",
    "resend>=2.30.1",
    "slowapi>=0.1.9",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.44.0",
]
